# Cocoon-SIT

./: .coverage  .dockerignore  .gitignore  Makefile  README.md  README.zh-CN.md  current-architecture.md  frontend-api-structure.md  frontend-architecture.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: alembic.ini  alembic_plugin_test.db-journal  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_vector_memory_and_runtime_contracts.py  0002_vector_runtime.py  0003_invite_flow.py  0004_system_config.py  0005_chat_groups.py  0006_idle_wakeup_runtime.py  0007_plugin_system.py  0008_plugin_user_settings_and_visibility.py  0009_plugin_target_bindings.py  0010_plugin_event_schedule.py  0011_plugin_chat_group_configs.py  0012_remove_plugin_dispatch_dedupe.py  0013_plugin_im_delivery_outbox.py  0014_user_im_bind_tokens.py  0015_plugin_im_target_routes.py  0016_runtime_tag_system_and_chat_group_visibility.py  0017_user_permission_overrides.py  0018_invite_group_binding_and_root_groups.py  0018_invite_group_bindings.py  0019_user_tag_ownership.py  0020_user_timezones.py  0021_invite_quota_accounts.py  0022_cocoon_context_anchor.py  0023_plugin_scope_error_split.py  0024_message_external_sender_metadata.py  0025_group_chat_aggregation.py  0026_user_plugin_scheds.py  0027_mem_profiles_and_ops.py  0028_mem_kw_cache.py  0029_user_group_scopes.py
backend/app/: main.py  web.py
backend/app/api/: deps.py  responses.py  router.py  wakeup_serialization.py
backend/app/core/: config.py  container.py  container_modules.py  db.py
backend/tests/: conftest.py  sqlite_helpers.py
(+761 files in other folders)
