[project]
name = "cocoon-sit-backend"
version = "0.1.0"
description = "Cocoon-SIT FastAPI backend and worker"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15.0",
  "cryptography>=44.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "itsdangerous>=2.2.0",
  "jieba>=0.42.1",
  "langchain-openai>=0.3.0",
  "langgraph>=0.3.0",
  "orjson>=3.10.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.8.0",
  "pyjwt>=2.10.0",
  "pytest>=8.3.0",
  "psycopg[binary]>=3.2.0",
  "python-multipart>=0.0.20",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.39",
  "uvicorn[standard]>=0.34.0"
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.tmp_pytest/pytest"
markers = [
  "api: HTTP/API surface tests",
  "pgvector: requires a PostgreSQL database with pgvector enabled",
  "integration: tests that exercise multiple components together",
  "unit: isolated tests without external service dependencies",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "alembic", "tests", "pyproject.toml", "alembic.ini"]
